--- a/make.conf
+++ b/make.conf
@@ -8,10 +8,9 @@ CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-MAKEOPT="-j4"
+MAKEOPT="-j6"
 ACCEPT_LICENSE="*"
-#USE="-spidermonkey -X -bluetooth"
-
+#USE="X elogind policykit dbus udisks -systemd -bluetooth pulseaudio xorg netwokmanager sddm wallpapers"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
@@ -23,3 +22,5 @@ PKGDIR="/var/cache/binpkgs"
 LC_MESSAGES=C
 
 GENTOO_MIRRORS="https://mirror.eu.oneandone.net/linux/distributions/gentoo/gentoo/ http://mirror.eu.oneandone.net/linux/distributions/gentoo/gentoo/ rsync://mirror.eu.oneandone.net/gentoo/ rsync://ftp.linux.org.tr/gentoo-distfiles/ rsync://rsync.gtlib.gatech.edu/gentoo rsync://mirrors.rit.edu/gentoo/"
+GRUB_PLATFORMS="efi-64"
+USE="alsa"
