--- a/hp_pav/make.conf
+++ b/hp_pav/make.conf
@@ -10,7 +10,7 @@ FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 MAKEOPT="-j6"
 ACCEPT_LICENSE="*"
-#USE="X elogind policykit dbus udisks -systemd -bluetooth pulseaudio xorg netwokmanager sddm wallpapers"
+#USE="X elogind alsa policykit dbus udisks -systemd -bluetooth pulseaudio xorg netwokmanager sddm wallpapers"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
@@ -23,4 +23,3 @@ LC_MESSAGES=C
 
 GENTOO_MIRRORS="https://mirror.eu.oneandone.net/linux/distributions/gentoo/gentoo/ http://mirror.eu.oneandone.net/linux/distributions/gentoo/gentoo/ rsync://mirror.eu.oneandone.net/gentoo/ rsync://ftp.linux.org.tr/gentoo-distfiles/ rsync://rsync.gtlib.gatech.edu/gentoo rsync://mirrors.rit.edu/gentoo/"
 GRUB_PLATFORMS="efi-64"
-USE="alsa"
