--- a/hp_zbook/make.conf
+++ b/hp_zbook/make.conf
@@ -2,17 +2,28 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
-COMMON_FLAGS="-O2 -pipe"
+COMMON_FLAGS="--msrch=nstive -O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
+MAKEOPTS="-j8 -l8"
+ACCEPT_KEYWORDS="~amd64"
+VIDEO_CARDS="nvidia"
+
+USE="ELOGIND -SYSTEMD -AQUA -CSS -A52 -GNOME -GTK nvidia "
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
 
+source /var/lib/layman/make.conf
+
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
+
+
+GENTOO_MIRRORS="https://mirror.eu.oneandone.net/linux/distributions/gentoo/gentoo/ http://mirror.eu.oneandone.net/linux/distributions/gentoo/gentoo/ rsync://mirror.eu.oneandone.net/gentoo/ rsync://ftp.linux.org.tr/gentoo-distfiles/ rsync://rsync.gtlib.gatech.edu/gentoo rsync://mirrors.rit.edu/gentoo/"
+GRUB_PLATFORMS="efi-64"
