--- a/hp_zbook/make.conf
+++ b/hp_zbook/make.conf
@@ -7,8 +7,12 @@ CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-
+MAKEOPT="-j7"
+ACCEPT_LICENSE="*"
+ACCEPT_KEYWORDS="~amd64"
+USE="X nvidia qt5 xorg dbus policykit alsa tpm networkmanager pulseaudio elogind -systemd lmsensors gtk3 luajit "
 # NOTE: This stage was built with the bindist Use flag enabled
+
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
@@ -16,3 +20,6 @@ PKGDIR="/var/cache/binpkgs"
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
+
+
+GRUB_PLATFORMA="efi-64"
